<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_id"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z1"
                    android:contentDescription="@string/About_Zoom"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="@string/About_Zoom" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/About_Zoom"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/about"
                    app:layout_constraintVertical_bias="0.904" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/starting"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z2"
                    android:contentDescription="@string/starting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/starting"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/starting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/starting"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.896" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/startingmeeting"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z3"
                    android:contentDescription="@string/starting_meeting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/starting_meeting"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/startingmeeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/destop_mobileapp"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z5"
                    android:contentDescription="@string/Desktop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/Desktop"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/destop_mobileapp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/duringMeeting"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z9"
                    android:contentDescription="@string/During_meeting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textVie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/During_meeting"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/duringMeeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/duringMeeting"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.896" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/beforemeeting"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z6"
                    android:contentDescription="@string/before_meeting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/before_meeting"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/beforemeeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/beforemeeting"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.896" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageButton
                    android:id="@+id/After_launch"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/z4"
                    android:contentDescription="@string/after_launch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/after_launch"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/After_launch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/After_launch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.896" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>